simple-proxy/front-envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: front-envoy-config
  namespace: default
data:
  front-envoy.yaml: |
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 80
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              access_log:
                - name: envoy.file_access_log
                  config:
                    path: "/var/log/access.log"
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/service/1"
                    route:
                      cluster: service1_http
                  - match:
                      prefix: "/service/2"
                    route:
                      cluster: service2_http
              http_filters:
              - name: envoy.router
                config: {}
      clusters:
      - name: service1_http
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        http2_protocol_options: {}
        hosts:
        - socket_address:
            address: service1
            port_value: 8080
      - name: service2_http
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        http2_protocol_options: {}
        hosts:
        - socket_address:
            address: service2
            port_value: 8080
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: front-envoy
spec:
  ports:
  - name: front-http
    port: 80
    targetPort: 80
  selector:
    app: front-envoy
  type: ClusterIP
